--- a/nbproject/project.properties
+++ b/nbproject/project.properties
@@ -29,11 +29,11 @@ dist.jar=${dist.dir}/Proyecto_DA2.jar
 dist.javadoc.dir=${dist.dir}/javadoc
 endorsed.classpath=
 excludes=
-file.reference.mssql-jdbc-7.4.1.jre8.jar=lib\\mssql-jdbc-7.4.1.jre8.jar
+file.reference.sqljdbc42.jar=lib\\sqljdbc42.jar
 includes=**
 jar.compress=false
 javac.classpath=\
-    ${file.reference.mssql-jdbc-7.4.1.jre8.jar}
+    ${file.reference.sqljdbc42.jar}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.deprecation=false
@@ -69,7 +69,7 @@ run.classpath=\
 # Space-separated list of JVM arguments used when running the project.
 # You may also define separate properties like run-sys-prop.name=value instead of -Dname=value.
 # To set system properties for unit tests define test-sys-prop.name=value:
-run.jvmargs=
+run.jvmargs=-Djava.library.path="C:\\Users\\usuario\\Desktop\\sqljdbc_6.0\\esn\\auth\\x64"
 run.test.classpath=\
     ${javac.test.classpath}:\
     ${build.test.classes.dir}
