--- a/.gitignore
+++ b/.gitignore
@@ -1,1 +1,14 @@
 /dist/
+.class
+.classpath
+.factorypath
+.project
+.settings
+
+### NetBeans ###
+nbproject/private/
+build/
+nbbuild/
+nbdist/
+.nb-gradle/
+target/
