--- a/nbproject/project.properties
+++ b/nbproject/project.properties
@@ -30,10 +30,18 @@ dist.javadoc.dir=${dist.dir}/javadoc
 endorsed.classpath=
 excludes=
 file.reference.sqljdbc42.jar=lib\\sqljdbc42.jar
+file.reference.swingx-all-1.6.4.jar=lib\\swingx-all-1.6.4.jar
+file.reference.synthetica.jar=lib\\synthetica.jar
+file.reference.syntheticaAddons.jar=lib\\syntheticaAddons.jar
+file.reference.syntheticaMauveMetallic.jar=lib\\syntheticaMauveMetallic.jar
 includes=**
 jar.compress=false
 javac.classpath=\
-    ${file.reference.sqljdbc42.jar}
+    ${file.reference.sqljdbc42.jar}:\
+    ${file.reference.synthetica.jar}:\
+    ${file.reference.syntheticaMauveMetallic.jar}:\
+    ${file.reference.swingx-all-1.6.4.jar}:\
+    ${file.reference.syntheticaAddons.jar}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.deprecation=false
@@ -58,7 +66,7 @@ javadoc.splitindex=true
 javadoc.use=true
 javadoc.version=false
 javadoc.windowtitle=
-main.class=UI.Principal
+main.class=UI.Login
 manifest.file=manifest.mf
 meta.inf.dir=${src.dir}/META-INF
 mkdist.disabled=false
