--- a/nbproject/project.properties
+++ b/nbproject/project.properties
@@ -39,9 +39,9 @@ jar.compress=false
 javac.classpath=\
     ${file.reference.sqljdbc42.jar}:\
     ${file.reference.synthetica.jar}:\
-    ${file.reference.syntheticaMauveMetallic.jar}:\
     ${file.reference.swingx-all-1.6.4.jar}:\
-    ${file.reference.syntheticaAddons.jar}
+    ${file.reference.syntheticaAddons.jar}:\
+    ${file.reference.syntheticaMauveMetallic.jar}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.deprecation=false
