--- a/nbproject/project.properties
+++ b/nbproject/project.properties
@@ -29,6 +29,7 @@ dist.jar=${dist.dir}/Proyecto_DA2.jar
 dist.javadoc.dir=${dist.dir}/javadoc
 endorsed.classpath=
 excludes=
+file.reference.mssql-jdbc-7.4.1.jre8.jar=C:\\Users\\ruben\\OneDrive\\Documentos\\1 Mis Activos ingresos\\3 ESAN\\Agosto 2020\\aplicaciones 2 (despues parcial)\\arhivos y tutorials para todas las clases\\driver jdbc pegarlo en cada proyecto\\mssql-jdbc-7.4.1.jre8.jar
 file.reference.sqljdbc42.jar=lib\\sqljdbc42.jar
 file.reference.swingx-all-1.6.4.jar=lib\\swingx-all-1.6.4.jar
 file.reference.synthetica.jar=lib\\synthetica.jar
@@ -41,7 +42,8 @@ javac.classpath=\
     ${file.reference.synthetica.jar}:\
     ${file.reference.swingx-all-1.6.4.jar}:\
     ${file.reference.syntheticaAddons.jar}:\
-    ${file.reference.syntheticaMauveMetallic.jar}
+    ${file.reference.syntheticaMauveMetallic.jar}:\
+    ${file.reference.mssql-jdbc-7.4.1.jre8.jar}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.deprecation=false
